Closed
Bug 1470341
Opened 7 years ago
Closed 7 years ago
When moving window to 2nd larger monitor theme image keeps the size of the original monitor
Categories
(Core :: Widget: Win32, defect)
Core
Widget: Win32
Tracking
()
RESOLVED
FIXED
mozilla63
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox-esr60 | --- | unaffected |
| firefox61 | --- | wontfix |
| firefox62 | --- | wontfix |
| firefox63 | --- | fixed |
People
(Reporter: Kensie, Assigned: dao)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(5 files)
(apologies in advance if this is the wrong component)
I have a Surface 3 connected to a secondary monitor. Naturally my second monitor is larger than the surface. When I drag a window from the Surface monitor to the second monitor, the theme image keeps the size from the Surface monitor, resulting in white/dark space on the left hand side of the toolbar/tabstrip.
Disabling and enabling the theme corrects the issue.
mozregression turned up this:
DEBUG : Found commit message:
Bug 1457189 - Dispatch the resolutionchange event when changing the display resolution even if DPI remains the same. r=jimm
MozReview-Commit-ID: A0thvn5bBDy
Screenshots attached, please let me know if I can add anything else.
| Reporter | ||
Comment 1•7 years ago
|
||
| Reporter | ||
Comment 2•7 years ago
|
||
| Reporter | ||
Comment 3•7 years ago
|
||
My exact steps to reproduce:
1. In an existing window on the smaller monitor, drag out a tab with Google search results to create a new window
2. Drag the new window to the 2nd bigger monitor.
I started with tabs already open, I have it set to show me my windows and tabs from last time. Sometimes just dragging the window after restarting the browser doesn't trigger the issue. Not sure why. Also once or twice it didn't trigger when I dragged out a blank tab, but the same session triggered the issue if I did a search in the new tab then dragged it.
Updated•7 years ago
|
Keywords: regression
Comment 4•7 years ago
|
||
This sounds like it's outside of Extensions, sending to Themes for verification.
Flags: needinfo?(jaws)
Product: WebExtensions → Toolkit
| Assignee | ||
Updated•7 years ago
|
| Assignee | ||
Updated•7 years ago
|
Flags: needinfo?(jaws)
| Assignee | ||
Updated•7 years ago
|
| Assignee | ||
Updated•7 years ago
|
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•7 years ago
|
status-firefox-esr60:
--- → unaffected
Comment 8•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8989702 [details]
Bug 1470341 - Also call UIResolutionChanged from WM_MOVING.
https://reviewboard.mozilla.org/r/254722/#review263500
Attachment #8989702 -
Flags: review?(jmathies) → review+
Pushed by dgottwald@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0c8bac19dc29
Also call UIResolutionChanged from WM_MOVING. r=jimm
Comment 10•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Comment 11•7 years ago
|
||
Is this worth uplifting to beta?
Majken, can you check this is fixed for you in current nightly?
Flags: needinfo?(majken)
Flags: needinfo?(dao+bmo)
Updated•7 years ago
|
status-firefox-esr52:
--- → unaffected
| Assignee | ||
Updated•7 years ago
|
Flags: needinfo?(dao+bmo) → qe-verify+
| Assignee | ||
Comment 12•7 years ago
|
||
Comment on attachment 8989702 [details]
Bug 1470341 - Also call UIResolutionChanged from WM_MOVING.
Approval Request Comment
[Feature/Bug causing the regression]: bug 1457189
[User impact if declined]: see comment 0
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]: not yet (although I myself have tested this with a second monitor)
[Needs manual test from QE? If yes, steps to reproduce]: see comment 0
[List of other uplifts needed for the feature/fix]: /
[Is the change risky?]: hardly
[Why is the change risky/not risky?]: pretty simple fix
[String changes made/needed]: /
Attachment #8989702 -
Flags: approval-mozilla-beta?
Comment 13•7 years ago
|
||
Hi everyone,
I'm trying to reproduce the issue on the Nightly version from 2018-06-21 using a Surface Pro with 2736 x 1824 and second monitor with 1920 x 1080 resolution. Didn't reproduce it after installing several themes and also changing resolutions.
Majken, can you please provide some further information regarding the environment you have? Both display resolutions and even the name (or link) of the theme you have installed and can be seen on the screenshots. I wish to verify if it is indeed fixed, however I cannot do so until I can reproduce the issue myself. On my end, it all looks good even on the old Nightly build. Also, as mentioned, it would be of great help if you can try to reproduce it on the latest Nightly.
| Assignee | ||
Comment 14•7 years ago
|
||
(In reply to Timea Babos from comment #13)
> Hi everyone,
>
> I'm trying to reproduce the issue on the Nightly version from 2018-06-21
> using a Surface Pro with 2736 x 1824 and second monitor with 1920 x 1080
> resolution. Didn't reproduce it after installing several themes and also
> changing resolutions.
What are your DPI settings on both monitors?
Flags: needinfo?(timea.babos)
| Reporter | ||
Comment 15•7 years ago
|
||
It also happens on my work laptop which is a Dell. I'll come back with the stats. Apologies I mostly only have time on the weekend for Mozilla things.
Comment 16•7 years ago
|
||
The custom scaling setting I have for the Surface Pro - 200% (Recommended one) and 100%(Recommended) for the external monitor. Is this what you asked about or something different?
Note that I changed them a couple of times in hope to reproduce the issue.
Majken, did the issue occur with all the themes ever installed and enabled or it was only with that one? Thanks for the reply.
Flags: needinfo?(timea.babos)
| Assignee | ||
Comment 18•7 years ago
|
||
Have you restarted Firefox after installing the theme?
Flags: needinfo?(timea.babos)
Comment 19•7 years ago
|
||
Yes I did. Tried out different themes (install + restart Firefox) as described in Comment 13. My last lead would be to know if it can be reproduced with a clean profile and safe mode? I don't see it mentioned in the comments and would be good to know.
Flags: needinfo?(timea.babos)
| Reporter | ||
Comment 20•7 years ago
|
||
I still see it on nightly from the 20th.
As mentioned I was also able to reproduce on a different machine and that was a new profile.
On my Surface 3, text size is 150% and Resolution is 1920 x 1280 and my external monitor is 100% and 1680 x 1050.
The theme in the screenshots is vintage roses 2 by zion.kz but I also use Bokeh Beta by joe.lv and it's a different bokeh theme on my work laptop.
| Reporter | ||
Comment 21•7 years ago
|
||
Screenshot of display settings
| Assignee | ||
Comment 22•7 years ago
|
||
Comment on attachment 8989702 [details]
Bug 1470341 - Also call UIResolutionChanged from WM_MOVING.
Alright, I'm not going to attempt to uplift this anymore if nobody besides me can confirm that this helps.
Majken, could you please file a new bug with foolproof steps to reproduce, including when to plug in the second monitor, when to move the window, the theme installation, potential restarts, etc.?
Flags: needinfo?(majken)
Attachment #8989702 -
Flags: approval-mozilla-beta?
Updated•7 years ago
|
Comment 23•7 years ago
|
||
Hi Majken,
Is this issue still reproducible on the latest Nightly? If yes, can you please file a bug as Dão mentioned in Comment 22?
Updated•7 years ago
|
Flags: qe-verify+
| Assignee | ||
Updated•7 years ago
|
Flags: needinfo?(majken)
You need to log in
before you can comment on or make changes to this bug.
Description
•