Bug 1470341 - Also call UIResolutionChanged from WM_MOVING. r=jimm

MozReview-Commit-ID: 2qyYncBG9jf

--HG--
extra : rebase_source : 0b5e9269756c572efdbff17d191b5a1579b20bc3